--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="tit">   Document tracking </h1>
+    <h1 id="Titulo">   Document tracking </h1>
 </body>
 </html>
