--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css" >
+
     <title>Document</title>
 </head>
 <body>
-    <h1 id="Titulo">Document tracking </h1>
+    <h1 id="tit">   Document tracking </h1>
 </body>
+<footer > Proyecto final ® JRC </footer>
+
 </html>
