--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Document Traking</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="tit">   Document tracking </h1>
+    <h1 id="tit">Document tracking</h1>
 </body>
 <footer > Proyecto final ® JRC </footer>
 
