--- a/departamento/departamentos.html
+++ b/departamento/departamentos.html
@@ -8,9 +8,9 @@
 	<div class="wrap">
 		<ul class="tabs">
 			<li><a href="#tab1"><span class="fa fa-home"></span><span class="tab-text">Inicio</span></a></li>
-			<li><a href="#tab2"><span class="fa fa-group"></span><span class="tab-text">Nosotros</span></a></li>
-			<li><a href="#tab3"><span class="fa fa-briefcase"></span><span class="tab-text">Servicios</span></a></li>
-			<li><a href="#tab4"><span class="fa fa-bookmark"></span><span class="tab-text">Blog</span></a></li>
+			<li><a href="#tab2"><span class="fa fa-group"></span><span class="tab-text">Departamentos</span></a></li>
+			<li><a href="#tab3"><span class="fa fa-briefcase"></span><span class="tab-text">Tramites</span></a></li>
+			<li><a href="#tab4"><span class="fa fa-bookmark"></span><span class="tab-text">Contratacion laboral</span></a></li>
 		</ul>
 
 		<div class="secciones">
