Link drive (node_modules) por si ocurre algun apuro

--- a/DocumentTracking/cliente/public/index.html
+++ b/DocumentTracking/cliente/public/index.html
@@ -34,3 +34,10 @@
   </body>
 
 </html>
+
+<!--Si en algun momento existen problemas con los "node_modules"
+    y el problema no se arregla con los comandos puede descargar
+    el archivo que necesite:
+      -> node_modules DocTra (se pega en la raiz del proyecto)
+      -> node_modules cliente (se pega en la carpeta cliete)
+    link: https://drive.google.com/drive/folders/16WMdtM23iOjEkNI1nybm4QF7G8PZskUW?usp=sharing-->
